-fixed uid/gid for postfix/syslog previously the uid/gid from the docker host was used for the permissions of the persistent storage. This rendered the service unstart-able as it used different ids. This is now fixed, but hard-wired to the uid/gid of the debian container.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,8 +16,8 @@
     group: "{{ item.group }}"
   with_items:
     - { path: "{{ postfix_persistent_storage }}", owner: 'root', group: 'root' }
-    - { path: "{{ postfix_persistent_storage }}/logs", owner: 'root', group: 'root' }
-    - { path: "{{ postfix_persistent_storage }}/spool", owner: 'postfix', group: 'postfix' }
+    - { path: "{{ postfix_persistent_storage }}/logs", owner: 101, group: 104 }
+    - { path: "{{ postfix_persistent_storage }}/spool", owner: 102, group: 106 }
 
 - name: prepare pre postfix environment
   template:
